[package]
name = "nah"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.0", features = ["rt", "net"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "http2", "charset"] }
rustyline = "15.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16.0", features = ["v4"] }
