[package]
name = "nah_chat"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
tokio = { version = "1.45.0", features = ["rt", "net"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "http2", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
