[package]
name = "nah_chat"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
async-stream = { version = "0.3.6" }
bytes = { version = "1.10" }
futures-core = "0.3.31"
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
