[package]
name = "nah_chat"
version = "0.5.0"
edition = "2024"
license = "MPL-2.0"
description = "Lightweight LLM chat completion API."
homepage = "https://github.com/linmx0130/nah"
repository = "https://github.com/linmx0130/nah"
keywords = ["llm","chat_completion", "openai"]
readme = "README.md"

[dependencies]
async-stream = { version = "0.3.6" }
bytes = { version = "1.10" }
futures-core = "0.3.31"
reqwest = { version = "0.12.22"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.31"
